<resources>
    <string name="app_name">Alias</string>
    <string name="main_activity_title">Alias</string>
    <string name="start_button">Start</string>
    <string name="add_new_word_button">New word</string>
    <string name="options_button">Options</string>
    <string name="exit_button">Exit</string>
    <string name="team">Team</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="new_word_text_view">Insert a new word:</string>
    <string name="new_word_hint">e.g. Beer</string>
    <string name="add">Add</string>
    <string name="team_name">Enter a team neme</string>
    <string name="player_name">Enter a player name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="reading">Reading</string>
    <string name="guessing">Guessing</string>
    <string name="go">GO!</string>
    <string name="right">Right!</string>
    <string name="wrong">Wrong!</string>
    <string name="time_up">Time\'s up!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points">Points</string>
    <string name="new_teams">New teams!</string>
    <string name="same_teams">Same Teams!</string>
    <string name="options">Options</string>
    <string name="round_duration">Round duration</string>
    <string name="confirm">Confirm</string>

</resources>
