<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavisalavisa.alias.ScoreBoardFragment"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/players_score_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:verticalScrollbarPosition="right"
        android:scrollbars="vertical"

        >
        <TableRow
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:alpha="0.8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/team"
                android:textSize="20sp"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/p1"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/p2"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="16sp"
                />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/score_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textSize="20sp"
        />
</LinearLayout>
