<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavisalavisa.alias.NewTeamFragment"
    android:orientation="vertical"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.pavisalavisa.alias.NewTeamFragment"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/team"/>
        <EditText
            android:id="@+id/team_name_edit_text"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/team_name"/>
        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.pavisalavisa.alias.NewTeamFragment"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p1"/>
        <EditText
            android:id="@+id/player_one_edit_text"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"/>
        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.pavisalavisa.alias.NewTeamFragment"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p2"/>
        <EditText
            android:id="@+id/player_two_edit_text"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"/>
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pavisalavisa.alias.NewTeamFragment"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="bottom"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/cancel_adding_team_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/confirm_adding_team_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"/>
        </LinearLayout>





</LinearLayout>
