<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavisalavisa.alias.MainActivity">

    <TextView
        android:id="@+id/main_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="46pt"
         />
    <Button
        android:id="@+id/start_team_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_title"
        android:layout_marginTop="100dp"
        android:text="@string/start_button"
        android:textSize="23pt"
        android:onClick="startClicked"
        android:background="@color/colorAccent"/>
    <Button
        android:id="@+id/add_new_word_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_team_button"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_word_button"
        android:textSize="23pt"
        android:onClick="newWordClicked"
        android:background="@color/colorAccent"/>
    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_word_button"
        android:layout_marginTop="10dp"
        android:text="@string/options_button"
        android:textSize="23pt"
        android:onClick="optionsClicked"
        android:background="@color/colorAccent"/>
</RelativeLayout>
