<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavisalavisa.alias.OptionsActivity">

    <TextView
        android:id="@+id/options_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/options"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="4dp"
        />
    <TextView
        android:id="@+id/round_duration_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/options_title"
        android:text="@string/round_duration"
        android:layout_margin="4dp"
        android:textSize="28sp"/>
    <SeekBar
        android:id="@+id/round_duration_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/round_duration_textview"
        android:layout_below="@id/options_title"
        android:layout_alignBottom="@id/round_duration_textview"
        android:layout_marginTop="4dp"
        android:layout_margin="4dp"
        android:max="120"/>
    <TextView
        android:id="@+id/point_threshold_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/round_duration_textview"
        android:text="@string/round_duration"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        android:textSize="28sp"/>
    <SeekBar
        android:id="@+id/point_threshold_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/point_threshold_textview"
        android:layout_below="@id/round_duration_textview"
        android:layout_alignBottom="@id/point_threshold_textview"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        android:max="120"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/options_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/colorAccent"
            android:text="@string/cancel"
            android:onClick="cancelOptions"
            />
        <Button
            android:id="@+id/options_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@color/colorAccent"
            android:text="@string/confirm"
            android:onClick="confirmOptions"
            />
    </LinearLayout>


</RelativeLayout>
