<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.pavisalavisa.alias.GameStartFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/team_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/team_name_text_view"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reading"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/current_player_reading"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:layout_marginStart="8dp"
            android:textSize="32sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/guessing"
            android:layout_marginStart="8dp"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/current_player_guessing"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:layout_marginStart="8dp"
            android:textSize="32sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
       />

</LinearLayout>
